--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,15 @@
 
     <build>
         <finalName>service-pdf</finalName>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
