--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mikenimer.apiserver</groupId>
+            <artifactId>worker-coldfusion</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
 
 
         <!-- Caching -->
