more work to get the docker file working for the mashape runner
start removing the .{format} as part of the api url

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,15 @@
     <name>service-cache</name>
     <url>http://maven.apache.org</url>
 
+
+    <developers>
+        <developer>
+            <id>mike</id>
+            <name>Mike Nimer</name>
+            <email>mnimer@gmail.com</email>
+        </developer>
+    </developers>
+
     <dependencies>
         <dependency>
             <groupId>com.mikenimer.apiappengine</groupId>
